# AresByteCode

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindLibZip.cmake
include/: attribute_info.h  attributeinfo.h  class_file.h  class_info.h  class_reader.h  class_writer.h  classinfo.h  classreader.h  classwriter.h  constant_info.h  constantinfo.h  field_info.h  fieldinfo.h  method_info.h  methodinfo.h  utils.h  visitor.h  vm_check.h  vmcheck.h
src/: CMakeLists.txt  attribute_info.cpp  attributeinfo.cpp  class_file.cpp  class_info.cpp  class_reader.cpp  class_writer.cpp  classinfo.cpp  classreader.cpp  classwriter.cpp  constant_info.cpp  constantinfo.cpp  field_info.cpp  fieldinfo.cpp  main.cpp  method_info.cpp  methodinfo.cpp  utils.cpp  vm_check.cpp  vmcheck.cpp
src/reader/: classreader.cpp  classreader.h
src/structure/: attributeinfo.cpp  attributeinfo.h  classfile.cpp  classfile.h  classinfo.cpp  classinfo.h  constantinfo.cpp  constantinfo.h  fieldinfo.cpp  fieldinfo.h  methodinfo.cpp  methodinfo.h
src/utils/: utils.cpp  utils.h
src/visitor/: visitor.h  vmcheck.cpp  vmcheck.h
src/wrapper/: classpool.cpp  classpool.h  classwrapper.cpp  classwrapper.h
src/writer/: classwriter.cpp  classwriter.h
tests/: CMakeLists.txt  main.cpp
